# Note-Naga-DAW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
NoteNaga.app/Contents/: Info.plist
NoteNaga_autogen/: deps
NoteNaga_autogen/MXUWEOXILK/: moc_main_window.cpp  moc_main_window.cpp.d
NoteNaga_autogen/TKOSHOSXRT/: moc_export_dialog.cpp  moc_export_dialog.cpp.d  moc_video_exporter.cpp  moc_video_exporter.cpp.d
note_naga_engine/: CMakeLists.txt  README.md  logger.cpp  nn_utils.cpp  note_naga_engine.cpp  note_naga_engine.h
note_naga_engine/audio/: audio_manager.cpp  audio_resource.cpp
note_naga_engine/core/: mixer.cpp  mixer.h  project_data.cpp  project_data.h  project_serializer.cpp  recent_projects_manager.cpp  runtime_data.cpp  soundfont_finder.cpp  types.cpp  types.h
note_naga_engine/doc/: NoteNagaEngineDiagram.drawio  note_naga_engine  note_naga_engine.drawio
note_naga_engine/dsp/: dsp_block_auto_wah.cpp  dsp_block_bitcrusher.cpp  dsp_block_chorus.cpp  dsp_block_compressor.cpp  dsp_block_deesser.cpp  dsp_block_delay.cpp  dsp_block_distortion.cpp  dsp_block_ducker.cpp  dsp_block_exciter.cpp  dsp_block_filter.cpp  dsp_block_flanger.cpp  dsp_block_gain.cpp  dsp_block_limiter.cpp  dsp_block_multi_eq.cpp  dsp_block_noise_gate.cpp  dsp_block_phaser.cpp  dsp_block_pitch_shifter.cpp  dsp_block_reverb.cpp  dsp_block_ring_mod.cpp  dsp_block_saturator.cpp  dsp_block_single_eq.cpp  dsp_block_stereo_imager.cpp  dsp_block_sub_bass.cpp  dsp_block_tape_saturation.cpp  dsp_block_transient_shaper.cpp  dsp_block_tremolo.cpp  dsp_block_vibrato.cpp  dsp_factory.cpp
note_naga_engine/include/note_naga_engine/: logger.h  nn_utils.h  note_naga_api.h  note_naga_engine.h
note_naga_engine/include/note_naga_engine/audio/: audio_manager.h  audio_resource.h
note_naga_engine/include/note_naga_engine/core/: async_queue_component.h  dsp_block_base.h  lock_free_mpmc_queue.h  lock_free_spsc_queue.h  mixer.h  note_naga_component.h  note_naga_synthesizer.h  project_data.h  project_file_types.h  project_serializer.h  recent_projects_manager.h  runtime_data.h  soundfont_finder.h  types.h
note_naga_engine/include/note_naga_engine/dsp/: dsp_block_auto_wah.h  dsp_block_bitcrusher.h  dsp_block_chorus.h  dsp_block_compressor.h  dsp_block_deesser.h  dsp_block_delay.h  dsp_block_distortion.h  dsp_block_ducker.h  dsp_block_exciter.h  dsp_block_filter.h  dsp_block_flanger.h  dsp_block_gain.h  dsp_block_limiter.h  dsp_block_multi_eq.h  dsp_block_noise_gate.h  dsp_block_pan.h  dsp_block_phaser.h  dsp_block_pitch_shifter.h  dsp_block_reverb.h  dsp_block_ring_mod.h  dsp_block_saturator.h  dsp_block_single_eq.h  dsp_block_stereo_imager.h  dsp_block_sub_bass.h  dsp_block_tape_saturation.h  dsp_block_transient_shaper.h  dsp_block_tremolo.h  dsp_block_vibrato.h  dsp_factory.h
note_naga_engine/include/note_naga_engine/io/: midi_file.h
note_naga_engine/include/note_naga_engine/module/: audio_worker.h  dsp_engine.h  external_midi_router.h  metronome.h  mixer.h  pan_analyzer.h  playback_worker.h  spectrum_analyzer.h
note_naga_engine/include/note_naga_engine/synth/: synth_fluidsynth.h
note_naga_engine/include/note_naga_engine/worker/: playback_worker.h
note_naga_engine/io/: midi_file.cpp  midi_file.h
note_naga_engine/module/: audio_worker.cpp  dsp_engine.cpp  external_midi_router.cpp  mixer.cpp  pan_analyzer.cpp  playback_worker.cpp  spectrum_analyzer.cpp
note_naga_engine/synth/: synth_fluidsynth.cpp
note_naga_engine/worker/: playback_worker.cpp  playback_worker.h
scripts/: static_analysis.sh
src/: main.cpp  main_window.cpp  main_window.h  resources.qrc  resources.qrc.depends
src/core/: app_context.cpp  app_context.h  mixer.cpp  mixer.h  playback_worker.cpp  shared.cpp  shared.h
src/gui/: icons.h  main_window.cpp  main_window.h  nn_gui_utils.cpp  nn_gui_utils.h
src/gui/components/: animated_time_label.cpp  animated_time_label.h  audio_bars_visualizer.cpp  audio_bars_visualizer.h  audio_dial.cpp  audio_dial.h  audio_dial_centered.cpp  audio_dial_centered.h  audio_dial_grid_widget.cpp  audio_dial_grid_widget.h  audio_horizontal_slider.cpp  audio_horizontal_slider.h  audio_vertical_slider.cpp  audio_vertical_slider.h  button_group_widget.cpp  button_group_widget.h  indicator_led_widget.cpp  indicator_led_widget.h  midi_seq_progress_bar.cpp  midi_seq_progress_bar.h  midi_sequence_selector.cpp  midi_sequence_selector.h  multi_channel_volume_bar.cpp  multi_channel_volume_bar.h  pan_analyzer.cpp  pan_analyzer.h  spectrum_analyzer.cpp  spectrum_analyzer.h  stereo_volume_bar_widget.cpp  stereo_volume_bar_widget.h  track_stereo_meter.cpp  track_stereo_meter.h  vertical_combo_box.cpp  vertical_combo_box.h  vertical_label.cpp  volume_bar.cpp  volume_bar.h
src/gui/dialogs/: audio_recording_dialog.cpp  audio_recording_dialog.h  dsp_block_chooser_dialog.cpp  dsp_block_chooser_dialog.h  instrument_selector_dialog.cpp  instrument_selector_dialog.h  mixer_settings_dialog.cpp  project_wizard_dialog.cpp  project_wizard_dialog.h  track_settings_dialog.cpp  track_settings_dialog.h
src/gui/dock_system/: advanced_dock_widget.cpp  dock_title_bar.cpp  dock_title_bar.h
src/gui/editor/: arrangement_layer_manager.cpp  arrangement_layer_manager.h  arrangement_minimap_widget.cpp  arrangement_minimap_widget.h  arrangement_resource_panel.cpp  arrangement_resource_panel.h  (+23 more)
src/icons/: app_section_external.af
src/main_widgets/: midi_control_bar_widget.cpp  midi_editor_widget.cpp  midi_keyboard_ruler.cpp  midi_keyboard_ruler.h  track_list_widget.cpp  track_list_widget.h  track_mixer_widget.cpp  track_mixer_widget.h  track_widget.cpp
src/media_export/: media_exporter.cpp  media_exporter.h  media_renderer.cpp  media_renderer.h  preview_worker.cpp  preview_worker.h
src/note_naga_engine/: note_naga_api.h  note_naga_engine.cpp  note_naga_engine.h
src/video_export/: export_dialog.cpp  export_dialog.h  video_exporter.cpp  video_exporter.h  video_renderer.cpp  video_renderer.h
src/widgets/: animated_time_label.cpp  animated_time_label.h
(+68 files in other folders)
